--- a/blog.html
+++ b/blog.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Página inicial</h1>
-    <a href="vendas.html">Ir para a página de vendas</a>
-    <a href="blog.html">Ir para a página de blog</a>
+    <h1>Página de blog</h1>
+    <a href="index.html">Voltar para a página inicial</a>
+    <p>Bem vindo à página de blog!</p>
 </body>
 </html>
