--- a/blog.html
+++ b/blog.html
@@ -10,5 +10,7 @@
     <h1>Página de blog</h1>
     <a href="index.html">Voltar para a página inicial</a>
     <p>Bem vindo à página de blog!</p>
+    <p>Sorvete</p>
+
 </body>
 </html>
